# fast_alpine_todo

./: README.md  pyproject.toml
src/: config.ini  config.py  db.py  main.py
src/db/: tasks.json  users.json
src/demotodoapp/: __init__.py
src/static/: index.html  memo  signUp.html  todos.html
src/static/css/: login.css  signUp.css  todos.css
