[project]
name = "demotodoapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "4616464", email = "72287461+tokyo6464@users.noreply.github.com" }
]
dependencies = [
    "uvicorn>=0.29.0",
    "fastapi>=0.111.0",
    "bcrypt>=4.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/demotodoapp"]

[tool.black]
line-length = 79
